Many fix / add TU / Fix Readme